# srlinux-go

./: README.md  go.mod  go.sum
ndk/: bfd_service.proto  interface_service.proto  nexthop_group_service.proto  route_service.proto  sdk_common.proto  sdk_service.proto
pkg/gnmi/: config.json  gnmi.go
pkg/ndk/nokia.com/srlinux/sdk/protos/: appid_service.pb.go  bfd_service.pb.go  config_service.pb.go  interface_service.pb.go  lldp_service.pb.go  mpls_service.pb.go  mpls_service_grpc.pb.go  networkinstance_service.pb.go  nexthop_group_service.pb.go  nexthop_group_service_grpc.pb.go  route_service.pb.go  route_service_grpc.pb.go  sdk_common.pb.go  sdk_service.pb.go  sdk_service_grpc.pb.go  telemetry_service.pb.go  telemetry_service_grpc.pb.go
pkg/net/: net.go
pkg/srlinux/: srlinux.go
scripts/: gen-yang2go.sh  gen-yang2go_release.sh  go-protoc-gen.sh
yang/common/: srl_nokia-common.yang  srl_nokia-features.yang
yang/interfaces/: srl_nokia-if-ip.yang  srl_nokia-interfaces-ip-dhcp-server.yang  srl_nokia-interfaces-router-adv.yang  srl_nokia-interfaces-vlans.yang  srl_nokia-interfaces.yang  srl_nokia-tools-interfaces-ip-dhcp-relay.yang  srl_nokia-tools-interfaces-ip-vrrp.yang  srl_nokia-tools-interfaces.yang
yang/network-instance/: srl_nokia-bgp-vpn.yang  srl_nokia-bgp.yang  srl_nokia-ip-route-tables.yang  srl_nokia-isis.yang  srl_nokia-ospf-types.yang  srl_nokia-ospf.yang  srl_nokia-tools-bgp.yang  srl_nokia-tools-icmp.yang  srl_nokia-tools-ospf.yang  srl_nokia-traffic-engineering.yang  srl_nokia-tunnel-tables.yang
yang/platform/: srl_nokia-platform-vxdp.yang  srl_nokia-tools-platform.yang
yang/routing-policy/: srl_nokia-routing-policy.yang
yang/system/: srl_nokia-aaa.yang  srl_nokia-dhcp-server.yang  srl_nokia-gnmi-server.yang  srl_nokia-logging.yang  srl_nokia-system-network-instance-bgp-vpn.yang  srl_nokia-tools-cgroup.yang  srl_nokia-tools-tls.yang
yang/tunnel/: srl_nokia-tools-tunnel.yang  srl_nokia-tools-vxlan-tunnel.yang
yang_release/: CMakeLists.txt  rpm.spec.in  yang_zip.rpm.spec.in
yang_release/models/srl_nokia/models/system/: srl_nokia-gnmi-server.yang
yang_release/planned/: CMakeLists.txt
yang_release/planned/models/: config.json
yang_release/planned/models/srl_nokia/models/acl/: srl_nokia-tools-acl.yang
yang_release/planned/models/srl_nokia/models/interfaces/: srl_nokia-interfaces-bridge-table-mac-duplication-entries.yang  srl_nokia-interfaces-ip-dhcp-relay.yang  srl_nokia-interfaces-ip-dhcp-server.yang  srl_nokia-interfaces-nbr.yang  srl_nokia-tools-interfaces-dhcp.yang  srl_nokia-tools-interfaces-ip-dhcp-relay.yang  srl_nokia-tools-interfaces-ip-vrrp.yang
yang_release/planned/models/srl_nokia/models/network-instance/: srl_nokia-aggregate-routes.yang  srl_nokia-bgp-evpn.yang  srl_nokia-bgp-vpn.yang  srl_nokia-bridge-table-mac-duplication-entries.yang  srl_nokia-bridge-table-mac-duplication.yang  srl_nokia-icmp.yang  srl_nokia-linux.yang  srl_nokia-mpls.yang  srl_nokia-segment-routing.yang  srl_nokia-static-routes.yang  srl_nokia-tools-route-table.yang  srl_nokia-traffic-engineering.yang
yang_release/planned/models/srl_nokia/models/platform/: srl_nokia-platform-disk.yang  srl_nokia-platform-fan.yang  srl_nokia-platform-memory.yang  srl_nokia-platform-qos.yang
yang_release/planned/models/srl_nokia/models/qos/: srl_nokia-qos.yang  srl_nokia-tools-qos.yang
yang_release/planned/models/srl_nokia/models/routing-policy/: srl_nokia-policy-types.yang  srl_nokia-routing-policy.yang
yang_release/planned/models/srl_nokia/models/system/: srl_nokia-boot.yang  srl_nokia-json-rpc.yang  srl_nokia-keychains-future.yang  srl_nokia-keychains.yang  srl_nokia-lldp.yang  srl_nokia-load-balancing.yang  srl_nokia-maintenance-mode.yang  srl_nokia-mpls-label-management.yang  srl_nokia-ntp.yang  srl_nokia-sflow.yang  srl_nokia-system-info.yang  srl_nokia-system-network-instance-bgp-vpn.yang  srl_nokia-system-network-instance.yang  srl_nokia-telnet.yang.future  srl_nokia-tftp.yang.future  srl_nokia-tools-aaa.yang  srl_nokia-tools-cgroup.yang  srl_nokia-tools-logging.yang  srl_nokia-tools-tls.yang
yang_release/planned/models/srl_nokia/models/tunnel/: srl_nokia-tunnel-interfaces-vxlan-interface-bridge-table-multicast-destinations.yang  srl_nokia-tunnel-interfaces-vxlan-interface-bridge-table-unicast-destinations.yang  srl_nokia-tunnel-interfaces-vxlan-interface-bridge-table.yang  srl_nokia-tunnel-interfaces.yang  srl_nokia-tunnel.yang  srl_nokia-vxlan-tunnel-vtep.yang
yangrelease/: nokia_protobuf_types.h
yangrelease/models/srl_nokia/models/system/: srl_nokia-json-rpc.yang  srl_nokia-snmp.yang
yangrelease/planned/models/srl_nokia/models/acl/: srl_nokia-acl.yang
yangrelease/planned/models/srl_nokia/models/common/: srl_nokia-common.yang  srl_nokia-features.yang
yangrelease/planned/models/srl_nokia/models/interfaces/: srl_nokia-if-ip.yang  srl_nokia-interfaces-bridge-table.yang  srl_nokia-interfaces-ip-vrrp.yang  srl_nokia-interfaces-lag.yang  srl_nokia-interfaces.yang  srl_nokia-lacp.yang  srl_nokia-tools-interfaces.yang
yangrelease/planned/models/srl_nokia/models/network-instance/: srl_nokia-bgp.yang  srl_nokia-bridge-table-mac-table.yang  srl_nokia-isis.yang  srl_nokia-network-instance-future.yang  srl_nokia-network-instance-mtu.yang  srl_nokia-network-instance.yang  srl_nokia-next-hop-groups.yang  srl_nokia-rib-bgp.yang  srl_nokia-tools-bgp.yang  srl_nokia-tools-network-instance.yang  srl_nokia-tunnel-tables.yang
yangrelease/planned/models/srl_nokia/models/platform/: srl_nokia-platform-acl.yang  srl_nokia-platform-cgroup.yang  srl_nokia-platform-chassis.yang  srl_nokia-platform-cpu.yang
yangrelease/planned/models/srl_nokia/models/system/: srl_nokia-aaa-types.yang  srl_nokia-aaa.yang  srl_nokia-app-mgmt.yang  srl_nokia-clock.yang  srl_nokia-console.yang.future  srl_nokia-dhcp-server.yang  srl_nokia-gnmi-server.yang  srl_nokia-snmp.yang  srl_nokia-system-bridge-table.yang  srl_nokia-system-network-instance-bgp-evpn-ethernet-segments.yang  srl_nokia-tools-clock.yang  srl_nokia-tools-dhcp-server.yang  srl_nokia-tools-packet-trace.yang  (+1 more)
(+1 files in other folders)
